Revision history for {{$dist->name}}

{{$NEXT}}

0.07      2015-04-01 14:51:27 -0400
  - Functions found in AnyEvent::Ident now have prototypes.  Any code that is
    using the API as documented shouldn't need to be changed.  This does not
    affect the OO interface (AnyEvent::Ident::Client/Server)
  - Documentation cleanup

0.06      2014-04-08 14:38:03 -0400
  - support for Perl 5.8

0.05      2013-02-09 18:48:43 America/New_York
  - simplify inheritence by removing dep on base

0.04      2013-02-09 09:53:32 America/New_York
  - do not call recv from module
  - use on_bind callback if you need bindport after start but before client connection

0.03      2013-01-19 18:16:47 America/New_York
  - documentation updates

0.02      2013-01-17 11:01:45 America/New_York
  - allow custom response classes

0.01      2013-01-15 11:45:47 America/New_York
  - initial version