@@ -9,14 +9,19 @@ version = 0.07
 [@Author::Plicease]
 release_tests = 1
 travis_status = 1
-installer     = ModuleBuild
+installer     = MakeMaker
 
 [RemovePrereqs]
+; comes with Perl
 remove = strict
 remove = warnings
 remove = base
 remove = Carp
 remove = Exporter
+
+; comes with AnyEvent
+remove = AnyEvent::Handle
+remove = AnyEvent::Socket
 
 [Prereqs / SuggestedPrereqs]
 -relationship       = recommends
@@ -26,4 +31,6 @@ EV                  = 0
 ;Foo::Bar = 0
 
 [Author::Plicease::Upload]
+
+[Author::Plicease::InstallerPerlVersion]
 
