@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Switch to MakeMaker
 
 0.07      2015-04-01 14:51:27 -0400
   - Functions found in AnyEvent::Ident now have prototypes.  Any code that is
